recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: recursive variable length needs type
  var length = length + 3
               ^Spiral:5: error: recursive variable steps needs type
  var steps = steps-1
              ^