recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(steps != 0){
  avance(length)
  gauche(angle)
  var steps = steps-1
  var length = length + 3
  }
}